score Section Added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
         </section>
         <!-- Play Ground Start -->
-        <section class="Play-ground ">
+        <section class="Play-ground hidden ">
    <div class="flex flex-col justify-center items-center gap-8 pt-16" >
      <!-- screen -->
      <div class="artboard border-[20px] border-[#010313CC] bg-[#FFFFFFB3] rounded-2xl artboard-horizontal phone-6">
@@ -86,8 +86,15 @@
    </div>
         </section>
         <!-- Play Ground End -->
-        <section class="score">
-    
+        <section class="score flex justify-center items-center min-h-screen">
+    <div class="text-white flex flex-col items-center gap-5 bg-[#FFFFFF33] p-4 rounded-xl">
+        <h1 class="text-8xl text-white"> <span class="font-extrabold"> Score :</span>
+            <span class="">14</span>
+         </h1>
+         <button class="btn text-xl text-black bg-white font-bold">Play Again</button>
+         <p>Practice Will Make You Pro</p>
+        
+    </div>
         </section>
     </main>
 </body>
