--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme = "light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +14,15 @@
 <body>
     <main class=" bg-[#010313] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-top">
         <!-- home Screen -->
-        <section class="home flex flex-col min-h-screen  justify-center hidden">
+        <section id="home-screen" class="flex flex-col min-h-screen  justify-center ">
 <div class="flex flex-col items-center gap-10">
     <h1 class="text-9xl uppercase  text-white anton-regular">Alpha Clash Pro</h1>
 <p class="text-2xl text-white">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-<button class="btn text-xl bg-white text-black">Play Now</button>
+<button onclick="Play()" class="btn text-xl bg-white text-black">Play Now</button>
 </div>
         </section>
         <!-- Play Ground Start -->
-        <section class="Play-ground hidden ">
+        <section id="Play-ground" class="hidden ">
    <div class="flex flex-col justify-center items-center gap-8 pt-16" >
      <!-- screen -->
      <div class="artboard border-[20px] border-[#010313CC] bg-[#FFFFFFB3] rounded-2xl artboard-horizontal phone-6">
@@ -30,43 +30,43 @@
         <p class="bg-[#2F2941] py-2 text-white px-4 rounded-b-xl">Don't watch keyboard while playing</p>
       </div>
      <div class="flex justify-center items-center h-full">
-        <h1 class="text-9xl text-black font-bold">Y</h1>
+        <h1 id="current-alphabet" class="text-9xl text-black font-bold">Y</h1>
      </div>
     </div>
     <!-- Keyboard start -->
     <div>
         <div class="flex justify-center gap-1 my-1 w-full">
-            <kbd class="kbd">q</kbd>
-            <kbd class="kbd">w</kbd>
-            <kbd class="kbd">e</kbd>
-            <kbd class="kbd">r</kbd>
-            <kbd class="kbd">t</kbd>
-            <kbd class="kbd">y</kbd>
-            <kbd class="kbd">u</kbd>
-            <kbd class="kbd">i</kbd>
-            <kbd class="kbd">o</kbd>
-            <kbd class="kbd">p</kbd>
+            <kbd id="q" class="kbd">q</kbd>
+            <kbd id="w" class="kbd">w</kbd>
+            <kbd id="e" class="kbd">e</kbd>
+            <kbd id="r" class="kbd">r</kbd>
+            <kbd id="t" class="kbd">t</kbd>
+            <kbd id="y" class="kbd">y</kbd>
+            <kbd id="u" class="kbd">u</kbd>
+            <kbd id="i" class="kbd">i</kbd>
+            <kbd id="o" class="kbd">o</kbd>
+            <kbd id="p" class="kbd">p</kbd>
           </div> 
           <div class="flex justify-center gap-1 my-1 w-full">
-            <kbd class="kbd">a</kbd>
-            <kbd class="kbd">s</kbd>
-            <kbd class="kbd">d</kbd>
-            <kbd class="kbd">f</kbd>
-            <kbd class="kbd">g</kbd>
-            <kbd class="kbd">h</kbd>
-            <kbd class="kbd">j</kbd>
-            <kbd class="kbd">k</kbd>
-            <kbd class="kbd">l</kbd>
+            <kbd id="a" class="kbd">a</kbd>
+            <kbd id="s" class="kbd">s</kbd>
+            <kbd id="d" class="kbd">d</kbd>
+            <kbd id="f" class="kbd">f</kbd>
+            <kbd id="g" class="kbd">g</kbd>
+            <kbd id="h" class="kbd">h</kbd>
+            <kbd id="j" class="kbd">j</kbd>
+            <kbd id="k" class="kbd">k</kbd>
+            <kbd id="l" class="kbd">l</kbd>
           </div> 
           <div class="flex justify-center gap-1 my-1 w-full">
-            <kbd class="kbd">z</kbd>
-            <kbd class="kbd">x</kbd>
-            <kbd class="kbd">c</kbd>
-            <kbd class="kbd">v</kbd>
-            <kbd class="kbd">b</kbd>
-            <kbd class="kbd">n</kbd>
-            <kbd class="kbd">m</kbd>
-            <kbd class="kbd">/</kbd>
+            <kbd id="z" class="kbd">z</kbd>
+            <kbd id="x" class="kbd">x</kbd>
+            <kbd id="c" class="kbd">c</kbd>
+            <kbd id="v" class="kbd">v</kbd>
+            <kbd id="b" class="kbd">b</kbd>
+            <kbd id="n" class="kbd">n</kbd>
+            <kbd id="m" class="kbd">m</kbd>
+            <kbd id="/" class="kbd">/</kbd>
           </div>
     </div>
     <!-- Keyboard End -->
@@ -75,27 +75,30 @@
         <button class="btn rounded-full bg-[#894189] text-white text-xl ">
             Life
             <img src="images/Vector (1).svg" alt="">
-            <span>1</span>
+            <span id="current-life">5</span>
           </button>
           <button class="btn rounded-full text-white text-xl  bg-[#360490]">
             Score
             <img src="images/monetization_on.svg" alt="">
-            <span>1</span>
+            <span id="current-score">0</span>
           </button>
     </div>
    </div>
         </section>
         <!-- Play Ground End -->
-        <section class="score flex justify-center items-center min-h-screen">
-    <div class="text-white flex flex-col items-center gap-5 bg-[#FFFFFF33] p-4 rounded-xl">
+        <section id="final-score" class="score flex justify-center items-center min-h-screen hidden">
+    <div class="text-white flex flex-col items-center gap-5 bg-[#FFFFFF33] p-4 rounded-xl ">
+      <h3 class="text-3xl">Game Over!</h3>
         <h1 class="text-8xl text-white"> <span class="font-extrabold"> Score :</span>
-            <span class="">14</span>
+            <span id="game-score" class="">14</span>
          </h1>
-         <button class="btn text-xl text-black bg-white font-bold">Play Again</button>
+         <button onclick="Play()" class="btn text-xl text-black bg-white font-bold">Play Again</button>
          <p>Practice Will Make You Pro</p>
         
     </div>
         </section>
     </main>
+    <script src="script/Alpha-clash.js"></script>
+    <script src="script/utility.js"></script>
 </body>
 </html>
